# fpso-management

./: .codecov.yml  .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
api/: settings.py  urls.py
equipment/: __init__.py  admin.py  models.py  serializers.py  viewsets.py
equipment/migrations/: 0001_initial.py
equipment/tests/: fixture.py  test_models.py  test_viewsets.py
users/: admin.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py  test_viewsets.py
vessel/: admin.py  apps.py  models.py  serializers.py  viewsets.py
vessel/migrations/: 0001_initial.py
vessel/tests/: fixture.py  test_models.py  test_viewsets.py
